tests/snapshots/snapshots__pipeline@classes_effectful.pr.snap
---
source: tests/snapshots.rs
expression: "tiny_prism::report(&src)"
input_file: tests/cases/classes_effectful.pr
---
== tokens ==
VOpen Class UIdent("Loud") LParen Ident("a") RParen LBrace Ident("loud") Colon LParen Ident("a") RParen Arrow KwInt RBrace VSemi Instance Ident("loudInt") Colon UIdent("Loud") LParen KwInt RParen LBrace Fn Ident("loud") LParen Ident("x") RParen Eq Let Ident("_") Eq Ident("println") LParen Ident("x") RParen In Ident("x") RBrace VSemi Fn Ident("main") LParen RParen Eq Ident("loud") LParen Int(IntLit { value: 3, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [
        ClassDecl {
            name: "Loud",
            param: "a",
            supers: [],
            methods: [
                (
                    "loud",
                    Fun(
                        [
                            Var(
                                "a",
                            ),
                        ],
                        Empty,
                        Int,
                    ),
                ),
            ],
            span: 0..37,
        },
    ],
    instances: [
        InstanceDecl {
            name: "loudInt",
            class: "Loud",
            head: Int,
            context: [],
            methods: [
                Decl {
                    name: "loud",
                    params: [
                        Param {
                            name: "x",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                    ],
                    ret: None,
                    eff: None,
                    constraints: [],
                    body: Spanned {
                        node: Let(
                            "_",
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "println",
                                        ),
                                        span: 93..100,
                                    },
                                    [
                                        Spanned {
                                            node: Var(
                                                "x",
                                            ),
                                            span: 101..102,
                                        },
                                    ],
                                ),
                                span: 93..103,
                            },
                            Spanned {
                                node: Var(
                                    "x",
                                ),
                                span: 107..108,
                            },
                        ),
                        span: 85..108,
                    },
                    wheres: [],
                    span: 72..108,
                },
            ],
            module: "",
            span: 39..110,
        },
    ],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "loud",
                        ),
                        span: 124..128,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 3,
                                    suffix: None,
                                },
                            ),
                            span: 129..130,
                        },
                    ],
                ),
                span: 124..131,
            },
            wheres: [],
            span: 112..131,
        },
    ],
}

== types ==
Type Error: instance method `loudInt.loud` must be pure; it performs IO
   ╭─[ <source>:6:16 ]
   │
 6 │   fn loud(x) = let _ = println(x) in x
   │                ───────────┬───────────  
   │                           ╰───────────── instance method `loudInt.loud` must be pure; it performs IO
───╯
